<resources>
    <string name="app_name">FirebaseExemplo</string>
    <string name="edtEmail">Email</string>
    <string name="edtPassword">Password</string>
    <string name="btnLogar">Logar</string>
    <string name="tvAltura">Altura</string>
    <string name="tvLargura">Largura</string>
    <string name="tvPeso">Peso</string>
    <string name="tvCor">Cor</string>
    <string name="btnBuscaValor">Busca Valor</string>
    <string name="filter_title_principal">Intent Filter</string>
    <string name="menu_add">Adicionar</string>
    <string name="menu_editar">Editar</string>
    <string name="menu_sair">Sair</string>
    <string name="tvFiltroList">Filtro</string>
    <string name="tvValorList">Valor</string>
    <string name="tvValor">Valor</string>
    <string name="btnSalvar">Salvar</string>
</resources>
